fix catalog product

--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -88,8 +88,8 @@
                                             'type': 'select',
                                             'name': 'type',
                                             'args': {
-                                                'option': _(constant('/App/Domain/Types/Catalog/ProductTypeType::LIST')),
-                                                'selected': item.type ?? constant('/App/Domain/Types/Catalog/ProductTypeType::TYPE_PRODUCT'),
+                                                'option': _(constant('/App/Domain/Casts/Catalog/Product/Type::LIST')),
+                                                'selected': item.type ?? constant('/App/Domain/Casts/Catalog/Product/Type::PRODUCT'),
                                             }
                                         } %}
                                     </div>
