added new reference for manufacturers

--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -128,8 +128,16 @@
                                             'name': 'manufacturer',
                                             'args': {
                                                 'value': item.manufacturer,
+                                                'list': 'manufacturers',
+                                                'autocomplete': 'off',
                                             }
                                         } %}
+
+                                        <datalist id="manufacturers">
+                                            {% for title in manufacturers.pluck('title')  %}
+                                                <option value="{{ title }}">{{ title }}</option>
+                                            {% endfor %}
+                                        </datalist>
                                     </div>
 
                                     <div class="col-12 col-md-6">
