--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -158,11 +158,11 @@
                             <span class="sub-item">{{ 'Countries'|locale }}</span>
                         </a>
                     </li>
-                    <li>
+                    {#<li>
                         <a href="/cup/reference/currencies">
                             <span class="sub-item">{{ 'Currencies'|locale }}</span>
                         </a>
-                    </li>
+                    </li>#}
                     <li>
                         <a href="/cup/reference/payments">
                             <span class="sub-item">{{ 'Payment methods'|locale }}</span>
@@ -181,6 +181,11 @@
                     <li>
                         <a href="/cup/reference/store-locations">
                             <span class="sub-item">{{ 'Store locations'|locale }}</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cup/reference/manufacturer">
+                            <span class="sub-item">{{ 'Manufacturers'|locale }}</span>
                         </a>
                     </li>
                     <li>
