--- a/src/Template/cup/user/form.twig
+++ b/src/Template/cup/user/form.twig
@@ -229,7 +229,7 @@
                                             'name': 'allow_mail',
                                             'args': {
                                                 'option': _(['yes', 'no']),
-                                                'selected': item.getAllowMail() ? 'yes' : 'no'
+                                                'selected': item.allow_mail ? 'yes' : 'no'
                                             }
                                         } %}
                                     </div>
