--- a/src/Template/cup/catalog/attribute/index.twig
+++ b/src/Template/cup/catalog/attribute/index.twig
@@ -32,7 +32,20 @@
                         {% block tbody %}
                             {% for item in attributes %}
                                 <div class="row">
-                                    <div class="col-8 col-sm">{{ item.title }}</div>
+                                    <div class="col-8 col-sm">
+                                        {% if item.group %}
+                                            {{ item.group }}
+                                            <i class="fas fa-long-arrow-alt-right px-1"></i>
+                                        {% endif %}
+
+                                        {{ item.title }}
+
+                                        <div class="text-black-50 float-right d-none d-lg-inline">
+                                            {% if item.is_filter %}
+                                                <span class="badge badge-secondary">Filter</span>
+                                            {% endif %}
+                                        </div>
+                                    </div>
                                     <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/catalog/attribute/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the attribute?'|locale }}');">
                                             <div class="btn-group">
